--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"dependencies": {
 		"body-parser": "^1.19.0",
 		"cookie-parser": "^1.4.5",
+		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"fcc-express-bground": "git+https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
 	},
